@@ -1,36 +1,40 @@
 package com.example.backend_nutripoint.config;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.Ordered;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
+// import org.springframework.web.filter.CorsFilter;
 
 import com.example.backend_nutripoint.jwt.JwtAuthenticationFilter;
 
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final AuthenticationConfiguration authenticationconfiguration;
+
     @Bean
     public AuthenticationManager authenticationManager() throws Exception {
         return authenticationconfiguration.getAuthenticationManager();
@@ -41,33 +45,60 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
+    // 🔹 Manejador para 401 (no autenticado)
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public AuthenticationEntryPoint authenticationEntryPoint() {
+        // return new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED);
+        return (request, response, authException) -> {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json");
+            response.getWriter().write("{\"error\": \"No autenticado o token inválido\"}");
+        };
+    }
 
-        return http.authorizeHttpRequests(authz -> authz
-                .requestMatchers("/imagenes/**").permitAll()
-                .requestMatchers("/productos/**").permitAll()
-                .requestMatchers("/auth/login").permitAll()
-                .requestMatchers("/auth/login-admin").permitAll()
-                .requestMatchers("/auth/register").permitAll()
-                .requestMatchers("/auth/register-admin").hasRole("ADMIN")
-                .anyRequest().authenticated())
-                .csrf(csrf -> csrf.disable())
-                .httpBasic(basic -> basic.disable())
-                .cors(cors -> cors.configurationSource(configurationSource()))
-                .sessionManagement(managment -> managment.sessionCreationPolicy(
-                        SessionCreationPolicy.STATELESS))
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
+    // 🔹 Manejador para 403 (sin permisos)
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        // return new AccessDeniedHandlerImpl();
+        return (request, response, accessDeniedException) -> {
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            response.setContentType("application/json");
+            response.getWriter().write("{\"error\": \"Acceso denegado: no tienes permisos\"}");
+        };
     }
 
     @Bean
-    CorsConfigurationSource configurationSource() {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
+        http
+
+                .csrf(csrf -> csrf.disable())
+                .httpBasic(httpBasic -> httpBasic.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/auth/login", "/auth/login-admin", "/auth/register-admin", "/auth/register",
+                                "/imagenes/**", "/productos/**")
+                        .permitAll()
+                        .requestMatchers("/auth/otro").hasAnyRole("ADMIN", "USER")
+                        .requestMatchers("/productos/otro").hasRole("USER")
+                        .anyRequest().authenticated())
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .exceptionHandling(ex -> ex
+                        .authenticationEntryPoint(authenticationEntryPoint())
+                        .accessDeniedHandler(accessDeniedHandler()));
+
+        return http.build();
+    }
+
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("*"));
-        config.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        config.setAllowedMethods(Arrays.asList("POST", "PUT", "GET", "DELETE"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+
+        // config.setAllowedOriginPatterns(Arrays.asList("*"));
+        config.setAllowedOrigins(List.of("http://localhost:4200"));
+        config.setAllowedMethods(List.of("POST", "PUT", "GET", "DELETE"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -75,13 +106,16 @@ public class SecurityConfig {
         return source;
     }
 
-    @Bean
-    FilterRegistrationBean<CorsFilter> corsFilter() {
-        FilterRegistrationBean<CorsFilter> corsBean = new FilterRegistrationBean<CorsFilter>(
-                new CorsFilter(this.configurationSource()));
+    // ! no se necesita porque arriba ya se define el .cors(cors ->
+    // cors.configurationSource...)
+    // @Bean
+    // FilterRegistrationBean<CorsFilter> corsFilter() {
+    // FilterRegistrationBean<CorsFilter> corsBean = new
+    // FilterRegistrationBean<CorsFilter>(
+    // new CorsFilter(this.configurationSource()));
 
-        corsBean.setOrder(Ordered.HIGHEST_PRECEDENCE);
-        return corsBean;
-    }
+    // corsBean.setOrder(Ordered.HIGHEST_PRECEDENCE);
+    // return corsBean;
+    // }
 
 }
