@@ -8,16 +8,19 @@ import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.cloudinary.Cloudinary;
 import com.cloudinary.utils.ObjectUtils;
+import com.example.backend_nutripoint.exceptions.ImageUploadException;
+import com.example.backend_nutripoint.exceptions.NotFoundException;
 import com.example.backend_nutripoint.models.ImgProd;
 import com.example.backend_nutripoint.models.Producto;
 import com.example.backend_nutripoint.repositories.ImgProdRepository;
 import com.example.backend_nutripoint.repositories.ProductoRepository;
 
-import jakarta.transaction.Transactional;
+// import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -37,38 +40,43 @@ public class ImgProdService {
     private String baseUrl;
 
     @Transactional
-    public List<String> uploadImage(List<MultipartFile> files, Integer productoId) throws IOException {
+    public List<String> uploadImage(List<MultipartFile> files, Integer productoId) {
         Producto producto = productoRepository.findById(productoId)
                 .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-        
+
         List<ImgProd> imagenesActuales = imgProdRepository.findByProductoIdProducto(productoId);
-        if(imagenesActuales.size() + files.size() > 3){
-            throw new RuntimeException("Solo puede haber un maximo de 3 imagenes por producto");
+        if (imagenesActuales.size() + files.size() > 3) {
+            throw new IllegalArgumentException("Solo puede haber un maximo de 3 imagenes por producto");
         }
-        
+
         List<ImgProd> imagenes = new ArrayList<>();
 
-        for(MultipartFile file: files){
+        for (MultipartFile file : files) {
             validateImage(file);
 
-        // definir el tipo de map como Map<String, Object>
-        Map uploadResult = cloudinary.uploader().upload(file.getBytes(), ObjectUtils.asMap(
-            "folder", "productos/" + productoId,
-            "resource_type", "image"
-        ));
-        String imageUrl = uploadResult.get("secure_url").toString();
-        
-        // Convertir archivo a bytes
-        // byte[] imageData = file.getBytes();
+            try{
 
-        // Guardar en la BD
-        ImgProd imgProd = new ImgProd();
-        // imgProd.setImage(imageData);
-        imgProd.setImageUrl(imageUrl);
-        imgProd.setContentType(file.getContentType());
-        imgProd.setProducto(producto);
-        
-        imagenes.add(imgProd);
+                
+                // definir el tipo de map como Map<String, Object>
+                Map uploadResult = cloudinary.uploader().upload(file.getBytes(), ObjectUtils.asMap(
+                    "folder", "productos/" + productoId,
+                    "resource_type", "image"));
+                    String imageUrl = uploadResult.get("secure_url").toString();
+                    
+                    // Convertir archivo a bytes
+                    // byte[] imageData = file.getBytes();
+                    
+                    // Guardar en la BD
+                    ImgProd imgProd = new ImgProd();
+                    // imgProd.setImage(imageData);
+                    imgProd.setImageUrl(imageUrl);
+                    imgProd.setContentType(file.getContentType());
+                    imgProd.setProducto(producto);
+                    
+                    imagenes.add(imgProd);
+                }catch(IOException e){
+                    throw new ImageUploadException("Error al subir la imagen: "+ file.getOriginalFilename(), e);
+                }
         }
 
         imgProdRepository.saveAll(imagenes);
@@ -80,25 +88,26 @@ public class ImgProdService {
     public List<String> getImagesByProductId(Integer idProducto) {
         List<ImgProd> imagenes = imgProdRepository.findByProductoIdProducto(idProducto);
         if (imagenes.isEmpty()) {
-            throw new RuntimeException("No se encontraron imágenes para este producto.");
+            throw new NotFoundException("No se encontraron imágenes para este producto.");
         }
         return imagenes.stream().map(ImgProd::getImageUrl).toList();
     }
 
     // Metodo para imagenes en blob
     // public byte[] getImageById(Integer idImg) {
-    //     ImgProd imgProd = imgProdRepository.findById(idImg)
-    //             .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
-    //     return imgProd.getImage();
+    // ImgProd imgProd = imgProdRepository.findById(idImg)
+    // .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
+    // return imgProd.getImage();
     // }
 
-    public String getType(Integer idImg) {
-        ImgProd imgProd = imgProdRepository.findById(idImg)
-                .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
-        return imgProd.getContentType();
-    }
+    // public String getType(Integer idImg) {
+    //     ImgProd imgProd = imgProdRepository.findById(idImg)
+    //             .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
+    //     return imgProd.getContentType();
+    // }
 
-        public void deleteImage(Integer idImg) {
+    @Transactional
+    public void deleteImage(Integer idImg) {
         ImgProd imgProd = imgProdRepository.findById(idImg)
                 .orElseThrow(() -> new RuntimeException("Imagen no encontrada"));
 
@@ -107,26 +116,27 @@ public class ImgProdService {
         try {
             cloudinary.uploader().destroy(publicId, ObjectUtils.emptyMap());
         } catch (Exception e) {
-            System.err.println("Error eliminando imagen de Cloudinary: " + e.getMessage());
+            throw new RuntimeException("Error eliminando imagen de Cloudinary: " + e.getMessage());
         }
 
         imgProdRepository.deleteById(idImg);
     }
 
     // public void deleteImage(Integer idImg) {
-    //     imgProdRepository.deleteById(idImg);
+    // imgProdRepository.deleteById(idImg);
     // }
 
     // public List<String> getImagesByProductId(Integer idProducto) {
-    //     List<ImgProd> imagenes = imgProdRepository.findByProductoIdProducto(idProducto);
+    // List<ImgProd> imagenes =
+    // imgProdRepository.findByProductoIdProducto(idProducto);
 
-    //     if (imagenes.isEmpty()) {
-    //         throw new RuntimeException("No se encontraron imágenes para este producto.");
-    //     }
+    // if (imagenes.isEmpty()) {
+    // throw new RuntimeException("No se encontraron imágenes para este producto.");
+    // }
 
-    //     // Convertir la lista de imágenes en URLs
-    //     return secureURLImages(imagenes);
-    //     // .toList(); CREO QUE PUEDE PONERSE SIMPLEMENTE ASI
+    // // Convertir la lista de imágenes en URLs
+    // return secureURLImages(imagenes);
+    // // .toList(); CREO QUE PUEDE PONERSE SIMPLEMENTE ASI
     // }
 
     private void validateImage(MultipartFile file) {
@@ -140,14 +150,15 @@ public class ImgProdService {
     }
 
     // private List<String> secureURLImages(List<ImgProd> imagenes){
-    //     return imagenes.stream()
-    //             .map(img -> baseUrl + img.getIdImg())
-    //             .toList();
-    //             // .collect(Collectors.toList());
+    // return imagenes.stream()
+    // .map(img -> baseUrl + img.getIdImg())
+    // .toList();
+    // // .collect(Collectors.toList());
     // }
-        // Extrae el public_id de la URL de Cloudinary
+    // Extrae el public_id de la URL de Cloudinary
     private String extractPublicId(String url) {
-        // Ejemplo: https://res.cloudinary.com/demo/image/upload/v1234/productos/123/abcde.jpg
+        // Ejemplo:
+        // https://res.cloudinary.com/demo/image/upload/v1234/productos/123/abcde.jpg
         String[] parts = url.split("/");
         String filename = parts[parts.length - 1]; // abcde.jpg
         return "productos/" + parts[parts.length - 2] + "/" + filename.replace(".jpg", "");
